--- a/src/assets/_layout/default.pug
+++ b/src/assets/_layout/default.pug
@@ -89,6 +89,7 @@ html(prefix="og:http://ogp.me/ns#")
     block css
 
     //- head内で読み込みたいJS
+    script(src="/assets/js/head.js")
     block scriptHead
 
 
