for windows fixed Yu Mincho settings

--- a/src/assets/css/_foundation/_fonts.scss
+++ b/src/assets/css/_foundation/_fonts.scss
@@ -1,1 +1,24 @@
 @charset "utf-8";
+
+@font-face {
+  font-family: "Yu Gothic M";
+  src: local("Yu Gothic Medium");
+}
+
+@font-face {
+  font-family: "Yu Gothic M";
+  src: local("Yu Gothic Bold");
+  font-weight: bold;
+}
+
+
+@font-face {
+  font-family: "Yu Mincho M";
+  src: local("Yu Mincho Medium");
+}
+
+@font-face {
+  font-family: "Yu Mincho M";
+  src: local("Yu Mincho Bold");
+  font-weight: bold;
+}
