--- a/src/assets/css/_foundation/_variables.scss
+++ b/src/assets/css/_foundation/_variables.scss
@@ -6,3 +6,7 @@ $colorWhite: #fff;
 $colorRed: #eb0a1e;
 $colorTwitter: #1da1f2;
 $colorFacebook: #3b579d;
+
+$maxWidth: 1920px;
+$spDesignWidthBasis: 750; // 単位なし
+$pcDesignWidthBasis: 1680; // 単位なし
